buildscript {
	repositories {
		gradlePluginPortal()
		flatDir {
			dirs 'libs'
		}
		dependencies {
			classpath name:'package-compileonly-sdk', version: '1.7.0'
			classpath "com.gradleup.shadow:shadow-gradle-plugin:9.1.0"
		}
	}
}

plugins {
	id 'java'
	id "com.github.ben-manes.versions" version '0.53.0'
}

configure(allprojects){

	apply plugin: 'com.gradleup.shadow'
	apply plugin: "com.automationanywhere.command-codegen"

	ext {
		groupName = 'com.automationanywhere'
		testNgVersion = '7.12.0'
		loggerVersion = '2.25.3'
		version '3.8.9'
	}
	group "$groupName"

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(11)
		}
	}

	compileJava.options.encoding = 'UTF-8'
	compileTestJava.options.encoding = 'UTF-8'

	repositories {
		mavenCentral()
		flatDir {
			dirs 'libs'
		}
	}

	packageJson{
		artifactName = project.name
		group = "$groupName"
		author = "Sumit Kumar"
		generatePackageWithDateTime = false
	}

	jar.dependsOn commandCodeGen
	shadowJar.dependsOn commandCodeGen

	shadowJar {
		archiveBaseName = project.name
		archiveClassifier = ''
		mergeServiceFiles('META-INF/spring.*')
		mergeServiceFiles('META-INF/services/java.sql.Driver')
		zip64 = true
		exclude 'META-INF/MANIFEST.MF'
		exclude 'META-INF/*.SF'
		exclude 'META-INF/*.DSA'
		exclude 'META-INF/*.RSA'
		relocate 'org.apache.commons.io', 'botframework.shaded.commons.io'
	}

	dependencies {
		annotationProcessor name: 'package-compileonly-sdk', version: '1.7.0'
		compileOnly name: 'package-compileonly-sdk', version: '1.7.0'

		implementation name: 'package-runtime-sdk', version: '1.0.0'
		testImplementation name: 'package-compileonly-sdk', version: '1.7.0'
		testImplementation group: "org.testng", name:"testng", version: "$testNgVersion"

		testImplementation 'com.google.protobuf:protobuf-java:4.34.0' //table,record type use this internally

		// https://mvnrepository.com/artifact/org.json/json
		implementation 'org.json:json:20251224'

		// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
		implementation group: "org.apache.logging.log4j", name: "log4j-api", version: "$loggerVersion"
		// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
		implementation group: "org.apache.logging.log4j", name: "log4j-core", version: "$loggerVersion"

		// https://mvnrepository.com/artifact/commons-io/commons-io
		implementation 'commons-io:commons-io:2.22.0'
		// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
		implementation 'org.apache.poi:poi-ooxml:5.5.1'

		// https://mvnrepository.com/artifact/org.apache.commons/commons-csv
		implementation 'org.apache.commons:commons-csv:1.14.1'
	}

	test {
		useTestNG()
		testLogging {
			// Print each test as it starts and finishes, plus everything the
			// test wrote to System.out / System.err (including log4j output
			// since log4j defaults to stderr). Mirrors what IntelliJ's
			// native test runner shows, but routed through the Gradle path
			// so the canonical task lifecycle still runs.
			events 'started', 'passed', 'skipped', 'failed',
			       'standard_out', 'standard_error'
			showStandardStreams = true
			exceptionFormat = 'full'
			showCauses = true
			showStackTraces = true
		}
	}

}
